--- a/app/src/main/res/layout/activity_level_select.xml
+++ b/app/src/main/res/layout/activity_level_select.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/light_background">
+
 
     <GridLayout
         android:id="@+id/levelGrid"
