--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="light_background">#FFF5F5F5</color>
+
+    <!-- Button colors (4-color theorem palette) -->
+    <color name="level_button_red">#FF5252</color>
+    <color name="level_button_green">#4CAF50</color>
+    <color name="level_button_blue">#2196F3</color>
+    <color name="level_button_yellow">#FFEB3B</color>
+
+    <!-- Text colors -->
+    <color name="text_primary_dark">#212121</color>
+    <color name="text_primary_light">#FFFFFF</color>
 </resources>
