--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/graph_bg_gradient"
     tools:context=".GraphColoringActivity">
     <com.example.a4color.GameView
         android:id="@+id/gameView"
