--- a/app/src/main/res/layout/activity_level_select.xml
+++ b/app/src/main/res/layout/activity_level_select.xml
@@ -2,9 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-
-
+    android:layout_height="match_parent"
+    android:background="@drawable/level_button_gradient">
 
     <GridLayout
         android:id="@+id/levelGrid"
@@ -15,5 +14,8 @@
         android:alignmentMode="alignMargins"
         android:columnOrderPreserved="false"
         android:padding="16dp">
+
+        <!-- Level buttons will be added programmatically -->
+
     </GridLayout>
 </ScrollView>
