--- a/app/src/main/res/layout/color_circle_item.xml
+++ b/app/src/main/res/layout/color_circle_item.xml
@@ -6,7 +6,8 @@
 
     <ImageView
         android:id="@+id/colorCircle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/color_option" />
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/color_option"/>
 </FrameLayout>
